syntax = "proto3";

package hydrosphere.serving.contract;

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_package = "io.hydrosphere.serving.proto.contract";

enum DataType {
    // Not a legal value for DataType.  Used to indicate a DataType field
    // has not been set.
    DT_INVALID = 0;

    // Data types that all computation devices are expected to be
    // capable to support.
    DT_FLOAT = 1;
    DT_DOUBLE = 2;
    DT_INT32 = 3;
    DT_UINT8 = 4;
    DT_INT16 = 5;
    DT_INT8 = 6;
    DT_STRING = 7;
    DT_COMPLEX64 = 8; // Single-precision complex
    DT_INT64 = 9;
    DT_BOOL = 10;
    DT_QINT8 = 11; // Quantized int8
    DT_QUINT8 = 12; // Quantized uint8
    DT_QINT32 = 13; // Quantized int32
    DT_QINT16 = 15; // Quantized int16
    DT_QUINT16 = 16; // Quantized uint16
    DT_UINT16 = 17;
    DT_COMPLEX128 = 18; // Double-precision complex
    DT_HALF = 19;
    DT_UINT32 = 22;
    DT_UINT64 = 23;
    DT_ANY = 24;

    DT_MAP = 27; // Hydroserving map structure inside the tensor
}

enum DataProfileType {
    NONE = 0;

    CATEGORICAL = 1;
    NOMINAL = 11;
    ORDINAL = 12;

    NUMERICAL = 2;
    CONTINUOUS = 21;
    INTERVAL = 22;
    RATIO = 23;

    IMAGE = 3;
    VIDEO = 4;
    AUDIO = 5;
    TEXT = 6;
}